Finished Home Page.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
 
 <body>
     <div class="container">
-   
+        <nav>
+            <a><img src="img/lambda-black.png" alt="Lambda Black"></a>
+            <a>Home</a>
+            <a href="about.html">About</a>
+            <a>Products</a>
+            <a>Blog</a>
+            <a>Contact</a>
+        </nav>
+        <img class="jumbo" src="img/jumbo.jpg" alt="Jumbo Img.">
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
