--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
     </div>
     <hr class="hr1">
     
-    <div>
+    <div class="sh">
       <div>
         <img src="img/about-plan.png" alt="strategy">
         <h3>
@@ -42,7 +42,7 @@
         <p>
           Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
         </p>
-        <button>                            
+        <button class="button">                            
           Learn More
         </button>
       </div>
@@ -54,13 +54,13 @@
         <p>
           Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
         </p>
-        <button>
+        <button class="button">
           Learn More
         </button>
       </div>
     </div>
 
-    <div>
+    <div class="pc">
       <div>
         <img src="img/about-office.png" alt="strategy">
         <h3>
@@ -69,7 +69,7 @@
         <p>
           Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
         </p>
-        <button>                            
+        <button class="button">                            
           Learn More
         </button>
       </div>
@@ -81,7 +81,7 @@
         <p>
           Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
         </p>
-        <button>
+        <button class="button">
           Learn More
         </button>
       </div>
@@ -95,7 +95,7 @@
         Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
       </p>
     </div>
-    
+
       <footer>
         <nav>
           <a href="index.html">Home</a>
